--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,7 +81,7 @@
 
 @media (max-width: 767.98px) {
 	.section-title {
-    	font-size: 20px;
+    	font-size: 24px;
     }
     .counts {
     	margin: 0;
@@ -108,6 +108,9 @@
 	}
 	.secondary-banner {
 	    height: 250px;
+	}
+	iframe {
+		height: auto;
 	}
 }
 
